--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^2.0.0-0",
+    "axios": "^0.18.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -39,6 +40,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-storybook": "~2.1.0",
     "vue-jest": "^5.0.0-0"
   }
